use FA library instead of plain SVGs for icons

--- a/src/component/Login.sass
+++ b/src/component/Login.sass
@@ -22,7 +22,7 @@
       line-height: 50px
       vertical-align: middle
 
-    .logo
+    .icon
       display: inline-block
       height: 40px
       width: 40px
