--- a/src/component/Login.sass
+++ b/src/component/Login.sass
@@ -13,7 +13,7 @@
     cursor: pointer
     height: 50px
 
-    a
+    span.authority
       display: inline-block
       color: $text-secondary
       text-decoration: none
