slightly restyle back component

--- a/src/component/Back.sass
+++ b/src/component/Back.sass
@@ -1,4 +1,11 @@
+@import 'colors.sass'
+
 #back-component
   opacity: 1
   cursor: pointer
   margin-right: 30px
+  position: fixed
+  top: 20px
+  left: 40px
+  font-size: 50px
+  color: $brand-color
