add Button component

--- a/src/component/Profile.sass
+++ b/src/component/Profile.sass
@@ -22,6 +22,11 @@
       display: inline-block
       color: $text-primary
       width: 45%
+    
+    &.single
+      width: 45%
+      margin: 70px auto
+      text-align: center
 
     img.profile-picture
       display: inline-block
