--- a/src/colors.sass
+++ b/src/colors.sass
@@ -8,3 +8,9 @@ $background-secondary: #363A43
 // text colors
 $text-primary: #ECECEC
 $text-secondary: #9A9A9A
+
+// state colors
+$info-color: #42AEFF
+$success-color: #33FF57
+$warn-color: #FFA047
+$error-color: #FF626E
