format sass files

--- a/src/colors.sass
+++ b/src/colors.sass
@@ -1,16 +1,20 @@
+// sass-lint:disable no-color-hex
 // brand colors
-$brand-color: #61DAFB
+$brand-color: #61dafb
 
 // background colors	
-$background-primary: #282C34
-$background-secondary: #363A43
+$background-primary: #282c34
+$background-secondary: #363a43
 
 // text colors
-$text-primary: #ECECEC
-$text-secondary: #9A9A9A
+$text-primary: #ececec
+$text-secondary: #9a9a9a
 
 // state colors
-$info-color: #42AEFF
-$success-color: #33FF57
-$warn-color: #FFA047
-$error-color: #FF626E
+$info-color: #42aeff
+$success-color: #33ff57
+$warn-color: #ffa047
+$error-color: #ff626e
+
+// shadows
+$shadow: rgba(0, 0, 0, 0.2)
