--- a/src/component/Error.sass
+++ b/src/component/Error.sass
@@ -1,4 +1,4 @@
-@import 'colors.sass'
+@import "colors.sass"
 
 img
   display: block
@@ -6,16 +6,19 @@ img
   width: auto
   margin: auto
 
+  .whatever
+    font-weight: bold
+
 .text-primary
-	color: $brand-color
-	font-size: 30px
-	font-weight: bold
-	text-align: center
-	margin: 30px 0 10px 0
+  color: $brand-color
+  font-size: 30px
+  font-weight: bold
+  text-align: center
+  margin: 30px 0 10px 0
 
 .text-secondary
-	color: $text-primary
-	font-size: 20px
-	text-align: center
-	font-style: italic
-	margin: 10px 0
+  color: $text-primary
+  font-size: 20px
+  text-align: center
+  font-style: italic
+  margin: 10px 0
