--- a/src/component/UserWidget.sass
+++ b/src/component/UserWidget.sass
@@ -1,8 +1,7 @@
-@import 'colors.sass'
+@import "colors.sass"
 
 #user-widget
   display: inline-block
-  border-radius: 5px
   padding: 10px
   height: 40px
   line-height: 40px
@@ -10,7 +9,7 @@
   border-radius: 40px
   cursor: pointer
   font-weight: bold
-  transition: .7s all ease
+  transition: 0.7s all ease
   float: right
   position: fixed
   top: 20px
