--- a/src/component/TodoListWidget.sass
+++ b/src/component/TodoListWidget.sass
@@ -1,4 +1,4 @@
-@import 'colors.sass'
+@import "colors.sass"
 
 .container
   max-width: 700px
@@ -17,7 +17,7 @@
     cursor: pointer
     display: inline-block
     width: calc(100% - 65px)
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.20)
+    box-shadow: 5px 5px 10px $shadow
 
     .list-title
       color: $text-primary
@@ -40,5 +40,5 @@
     visibility: hidden
     display: inline-block
     opacity: 0
-    transition: .5s all
+    transition: 0.5s all
     color: $text-primary
