fix profile template

--- a/src/component/Button.sass
+++ b/src/component/Button.sass
@@ -2,7 +2,7 @@
 
 .button-component
   color: $text-primary
-  border: none
+  border: 2px solid $text-primary
   background: none
   padding: 10px 30px
   border-radius: 5px
