--- a/src/component/Profile.sass
+++ b/src/component/Profile.sass
@@ -30,7 +30,7 @@
         text-align: center
 
       img
-        .profile-picture
+        &.profile-picture
           display: inline-block
           width: 120px
           height: auto
