fix button component style

--- a/src/component/Button.sass
+++ b/src/component/Button.sass
@@ -9,6 +9,8 @@
   user-select: none
   cursor: pointer
   transition: 0.3s ease all
+  font-size: 20px
+  font-weight: bold
 
   .button-component-icon
     display: inline-block
