add Menu component

--- a/src/component/UserWidget.sass
+++ b/src/component/UserWidget.sass
@@ -10,10 +10,7 @@
   cursor: pointer
   font-weight: bold
   transition: 0.7s all ease
-  float: right
-  position: fixed
-  top: 20px
-  right: 20px
+  margin-left: 60px
   overflow: hidden
   width: 40px
   user-select: none
