add Modal component

--- a/src/colors.sass
+++ b/src/colors.sass
@@ -16,5 +16,11 @@ $success-color: #33ff57
 $warn-color: #ffa047
 $error-color: #ff626e
 
-// shadows
+// comon colors
+$black: #000000
+$red: #ff5050
+
+// transparent
 $shadow: rgba(0, 0, 0, 0.2)
+$transparent-dark: rgba($background-primary, 0.9)
+
