center todo list widgets

--- a/src/component/TodoListWidget.sass
+++ b/src/component/TodoListWidget.sass
@@ -6,6 +6,7 @@
   line-height: 100px
   height: 100px
   margin: 40px auto
+  padding-left: 60px
 
   &:hover > .icon-trash
     visibility: visible
