rename modal component

--- a/src/component/modal/ConfirmationModal.sass
+++ b/src/component/modal/ConfirmationModal.sass
@@ -1,6 +1,6 @@
 @import "colors.sass"
 
-.modal
+.confirmation-modal-component
   background-color: $transparent-dark
   position: fixed
   top: 0
@@ -10,6 +10,7 @@
   width: 100vw
   height: 100vh
   z-index: 10
+  text-align: left
 
   .modal-body
     width: 640px
