--- a/src/component/modal/component/SelectItem.sass
+++ b/src/component/modal/component/SelectItem.sass
@@ -7,6 +7,18 @@
   height: 35px
   cursor: pointer
   font-size: 18px
+  margin: 5px 0
+  transition: 0.5s ease all
+
+  .arrow
+    display: inline-block
+    vertical-align: top
+    transition: 0.3s ease all
+    height: 35px
+    width: 0
+    overflow: hidden
+    text-align: center
+    margin-right: 5px
 
   .image
     display: inline-block
@@ -21,13 +33,8 @@
     transition: 0.3s ease all
 
   &:hover
-    line-height: 40px
-    height: 40px
-
-    .image
-      width: 40px
-      height: 40px
+    .arrow
+      width: 35px
 
     .text
       font-weight: bold
-      font-size: 20px
