InputModal component use Context API

--- a/src/component/modal/InputModal.sass
+++ b/src/component/modal/InputModal.sass
@@ -1,6 +1,6 @@
 @import "colors.sass"
 
-.confirmation-modal-component
+.input-modal-component
   background-color: $transparent-dark
   position: fixed
   top: 0
