style divider in Settings component

--- a/src/component/menu/Settings.sass
+++ b/src/component/menu/Settings.sass
@@ -42,3 +42,7 @@
     transition: 0.5s ease all
     text-align: center
     box-shadow: 0 0 10px $shadow
+
+  hr
+    border-color: $text-secondary
+    width: 80%
