add vertical margin in Button component

--- a/src/component/button/Button.sass
+++ b/src/component/button/Button.sass
@@ -1,6 +1,7 @@
 @import "colors.sass"
 
 .button-component
+  display: inline-block
   color: $text-primary
   border: 2px solid $text-primary
   background: none
@@ -11,6 +12,7 @@
   transition: 0.3s ease all
   font-size: 20px
   font-weight: bold
+  margin: 20px 0
 
   .button-component-icon
     display: inline-block
