use auto margin for SettingsItem component

--- a/src/component/menu/SettingsItem.sass
+++ b/src/component/menu/SettingsItem.sass
@@ -3,9 +3,11 @@
 .settings-item-component
   color: $text-secondary
   font-size: 30px
-  margin: 15px
+  margin: 15px auto
   cursor: pointer
   transition: 0.5s ease all
+  width: 40px
+  height: 40px
 
   &:hover
     color: $text-primary
