--- a/src/component/modal/InputModal.sass
+++ b/src/component/modal/InputModal.sass
@@ -13,7 +13,8 @@
   text-align: left
 
   .modal-body
-    width: 640px
+    width: 70%
+    max-width: 640px
     min-height: 200px
     background-color: $text-primary
     margin: 120px auto
