--- a/src/component/modal/InputModal.sass
+++ b/src/component/modal/InputModal.sass
@@ -33,15 +33,6 @@
       font-style: italic
       margin-bottom: 30px
 
-    .modal-confirmation-button
-      color: $red
-      font-size: 28px
-      font-weight: 800
-      text-align: right
-
-      .confirmation-text
-        cursor: pointer
-
     .modal-input
       color: $background-primary
       font-size: 20px
@@ -50,3 +41,14 @@
       border-bottom: 2px solid $background-primary
       background: transparent
       outline: none
+
+    .modal-confirmation-button
+      color: $red
+      background: none
+      cursor: pointer
+      font-size: 28px
+      font-weight: 800
+      border: none
+      float: right
+
+
