implement UI for Topbar component

--- a/src/colors.sass
+++ b/src/colors.sass
@@ -24,3 +24,7 @@ $red: #ff5050
 $shadow: rgba(0, 0, 0, 0.2)
 $transparent-dark: rgba($background-primary, 0.7)
 
+// REDESIGN
+$brand: #6FEA65
+$white: white
+$black: black
