add --on-brand color variable

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -2,6 +2,7 @@ body
   margin: 0
   font-family: "Segoe UI"
   --brand: #6FEA65
+  --on-brand: black
   --dark-gray: #0a0a0a
   --light-gray: #f0f0f0
 
