--- a/src/component/button/Button.sass
+++ b/src/component/button/Button.sass
@@ -1,7 +1,7 @@
 .button
   background: var(--brand)
   padding: 15px 30px
-  color: var(--color)
+  color: var(--on-brand)
   outline: none
   border: none
   border-radius: 10px
