implement Login via Google feature

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -1,6 +1,7 @@
 body
   margin: 0
   font-family: "Segoe UI"
+  --transparent: 00000000
   --brand: #6FEA65
   --on-brand: black
   --dark-gray: #0a0a0a
@@ -10,11 +11,13 @@ body
   --background: black
   --color: white
   --surface: var(--dark-gray)
+  --on-surface: white
 
 .theme-light
   --background: white
   --color: black
   --surface: var(--light-gray)
+  --on-surface: black
 
 .fullpage
   background-color: var(--background)
