--- a/src/component/button/Button.sass
+++ b/src/component/button/Button.sass
@@ -1,6 +1,7 @@
 .button
   padding: 15px 30px
-  color: var(--on-brand)
+  color: var(--on-surface)
+  background: var(--transparent)
   outline: none
   border: none
   font-size: 1.2rem
@@ -10,4 +11,5 @@
   transition: .5s ease all
   box-shadow: 0.3em 0.3em 0 0 var(--brand), inset 0.3em 0.3em 0 0 var(--brand)
   &:hover
+    color: var(--on-brand)
     box-shadow: 0 0 0 0 var(--brand), inset 6em 3.5em 0 0 var(--brand)
