implement general flex layout

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -6,6 +6,7 @@ body
   --on-brand: black
   --dark-gray: #0a0a0a
   --light-gray: #f0f0f0
+  --topbar-height: 40px
 
 .theme-dark
   --background: black
@@ -18,9 +19,3 @@ body
   --color: black
   --surface: var(--light-gray)
   --on-surface: black
-
-.fullpage
-  background-color: var(--background)
-  color: var(--color)
-  height: 100vh
-  width: 100vw
