--- a/src/component/layout/Topbar.sass
+++ b/src/component/layout/Topbar.sass
@@ -9,8 +9,9 @@
   background: $black
   width: 100vw
   color: $white
-  height: 40px
+  height: var(--topbar-height)
   border-bottom: 4px solid $brand
+  flex: 0
 
 .icon
   margin-right: 10px
