rename lists page to list

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -5,7 +5,7 @@ body
   --brand: #6FEA65
   --on-brand: black
   --dark-gray: #0a0a0a
-  --light-gray: #f0f0f0
+  --light-gray: #eeeeee
   --topbar-height: 40px
 
 .theme-dark
