change user widget background color

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -4,7 +4,7 @@ body
   --transparent: 00000000
   --brand: #6FEA65
   --on-brand: black
-  --dark-gray: #0a0a0a
+  --dark-gray: #151515
   --light-gray: #eeeeee
   --topbar-height: 40px
 
@@ -13,9 +13,11 @@ body
   --color: white
   --surface: var(--dark-gray)
   --on-surface: white
+  --widget-background: var(--dark-gray)
 
 .theme-light
   --background: white
   --color: black
   --surface: var(--light-gray)
   --on-surface: black
+  --widget-background: white
