--- a/src/component/user/UserWidget.sass
+++ b/src/component/user/UserWidget.sass
@@ -2,7 +2,7 @@
   display: flex
   flex-direction: row
   position: absolute
-  background: var(--surface)
+  background: var(--widget-background)
   color: var(--color)
   top: var(--topbar-height)
   right: 0
