change spacing in topbar

--- a/src/component/layout/Topbar.sass
+++ b/src/component/layout/Topbar.sass
@@ -12,7 +12,10 @@
   height: var(--topbar-height)
   border-bottom: 4px solid $brand
   flex: 0
+  gap: 20px
 
 .icon
-  margin-right: 10px
   cursor: pointer
+  &:last-child
+    margin-right: 20px
+  
