implement UI for List panel

--- a/src/page/List.sass
+++ b/src/page/List.sass
@@ -1,8 +1,14 @@
 .lists-layout
   display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
+  flex-direction: row
   height: 100vh
   background: var(--background)
   color: var(--color)
+
+  .list-panel
+    margin-top: var(--topbar-height)
+    display: flex
+    gap: 10px
+    flex-direction: column
+    background: var(--surface)
+    padding: 20px
