format all style files

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -1,14 +1,14 @@
 :root
-  --transparent: #00000000
-  --brand: #6FEA65
+  --transparent: rgb(0 0 0 / 0%)
+  --brand: rgb(111 234 101)
   --on-brand: black
-  --dark-gray: #151515
-  --light-gray: #f3f3f3
+  --dark-gray: rgb(21 21 21)
+  --light-gray: rgb(243 243 243)
   --topbar-height: 40px
 
 body
   margin: 0
-  font-family: "Segoe UI"
+  font-family: "Segoe UI", sans-serif
 
 .theme-dark
   --background: black
