--- a/src/component/button/Button.sass
+++ b/src/component/button/Button.sass
@@ -8,8 +8,9 @@
   text-transform: lowercase
   font-weight: bold
   cursor: pointer
-  transition: .5s ease all
+  transition: 0.5s ease all
   box-shadow: 0.3em 0.3em 0 0 var(--brand), inset 0.3em 0.3em 0 0 var(--brand)
+
   &:hover
     color: var(--on-brand)
     box-shadow: 0 0 0 0 var(--brand), inset 6em 3.5em 0 0 var(--brand)
