--- a/src/component/user/UserWidget.sass
+++ b/src/component/user/UserWidget.sass
@@ -9,7 +9,7 @@
   margin: 10px
   border-radius: 5px
   gap: 10px
-  box-shadow: 0 0 10px #0000004D
+  box-shadow: 0 0 10px rgb(0 0 0 / 30.2%)
 
 #user-photo
   width: 80px
@@ -22,7 +22,8 @@
   display: flex
   flex-direction: column
   justify-content: center
-  h3  
+
+  h3
     margin: 0
 
 .logout-icon
@@ -33,8 +34,9 @@
   cursor: pointer
   justify-content: center
   text-align: center
+
   &:hover
     color: red
+
   .icon
     margin: 0
-      
