--- a/src/page/ListPage.sass
+++ b/src/page/ListPage.sass
@@ -1,12 +1,9 @@
 .lists-layout
   display: flex
   flex-direction: row
-  height: 100vh
-  background: var(--background)
-  color: var(--color)
+  height: calc(100vh - var(--topbar-height))
 
   .list-panel
-    margin-top: var(--topbar-height)
     display: flex
     gap: 10px
     flex-direction: column
