add nested routing for /list route

--- a/src/component/todo/List.sass
+++ b/src/component/todo/List.sass
@@ -1,11 +1,12 @@
 .list
   display: flex
   flex-direction: row
-  width: 300px
+  width: 320px
   padding: 5px 5px 5px 10px
   background: var(--background)
   gap: 10px
   border-radius: 5px
+  box-sizing: border-box
   cursor: pointer
 
   .name
