use component scoped stylesheets

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -5,6 +5,7 @@
   --dark-gray: rgb(21 21 21)
   --light-gray: rgb(243 243 243)
   --topbar-height: 40px
+  --topbar-decoration-line-height: 4px
 
 body
   margin: 0
