--- a/src/page/NewListPage.module.sass
+++ b/src/page/NewListPage.module.sass
@@ -1,4 +1,4 @@
-.page-layout-new-list
+#layout
   width: 100%
   overflow: auto
   display: block
@@ -11,7 +11,3 @@
     display: flex
     flex-flow: row wrap
     gap: 20px
-
-    .icon
-      width: 20px
-      height: 20px
