--- a/src/page/NoneListSelectedPage.module.sass
+++ b/src/page/NoneListSelectedPage.module.sass
@@ -1,10 +1,6 @@
-.page-layout
+#layout
   width: 100%
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
-
-  .link
-    color: var(--brand)
-    font-weight: bold
