fix sass lint warnings

--- a/src/component/layout/FlexibleContent.module.sass
+++ b/src/component/layout/FlexibleContent.module.sass
@@ -2,8 +2,8 @@
   display: flex
   flex: 1
   padding: 20px
-  justify-content: start
-  align-items: start
+  justify-content: flex-start
+  align-items: flex-start
   flex-direction: row
 
   &.direction-column
