--- a/src/component/user/UserWidget.module.sass
+++ b/src/component/user/UserWidget.module.sass
@@ -4,11 +4,11 @@
   position: absolute
   background: var(--widget-background)
   color: var(--color)
-  top: var(--topbar-height)
   right: 0
   margin: 10px
   border-radius: 5px
   gap: 10px
+  opacity: 1
   box-shadow: 0 0 10px rgb(0 0 0 / 30.2%)
 
   #picture
