implement create new list feature

--- a/src/component/button/NewList.module.sass
+++ b/src/component/button/NewList.module.sass
@@ -7,13 +7,14 @@
   padding: 15px 0
   border-radius: 10px
   cursor: pointer
+  margin-bottom: 20px
 
 form
   width: 320px
   display: flex
   flex-direction: column
   gap: 10px
-  position: relative
+  margin-bottom: 20px
 
   .todo-list-item
     display: flex
@@ -24,7 +25,6 @@ form
     gap: 5px
     box-sizing: border-box
     cursor: pointer
-    position: relative
     padding: 5px 5px 5px 15px
 
     input
@@ -51,8 +51,8 @@ form
 
   .icon-picker
     position: absolute
-    top: -10px
-    left: 330px
+    top: 10px
+    left: 350px
 
   .buttons
     display: flex
