--- a/src/component/button/NewList.module.sass
+++ b/src/component/button/NewList.module.sass
@@ -3,14 +3,14 @@
   justify-content: center
   align-items: center
   background: var(--background)
-  width: 320px
+  width: 100%
   padding: 15px 0
   border-radius: 10px
   cursor: pointer
   margin-bottom: 20px
 
 form
-  width: 320px
+  width: 100%
   display: flex
   flex-direction: column
   gap: 10px
@@ -19,7 +19,7 @@ form
   .todo-list-item
     display: flex
     flex-direction: row
-    width: 320px
+    width: 100%
     background: var(--background)
     border-radius: 10px
     gap: 5px
