--- a/src/component/todo/TodoListItem.module.sass
+++ b/src/component/todo/TodoListItem.module.sass
@@ -1,11 +1,11 @@
 .todo-list-item
   display: flex
   flex-direction: row
-  width: 320px
+  width: 100%
   padding: 5px 5px 5px 10px
   background: var(--background)
   gap: 10px
-  border-radius: 5px
+  border-radius: 10px
   box-sizing: border-box
   cursor: pointer
 
@@ -23,4 +23,4 @@
     width: 20px
     height: 20px
     padding: 15px
-    border-radius: 5px
+    border-radius: 10px
