--- a/src/page/ListPage.module.sass
+++ b/src/page/ListPage.module.sass
@@ -3,11 +3,21 @@
   flex-direction: row
   height: calc(100vh - var(--topbar-height) - var(--topbar-decoration-line-height))
 
-  #list-panel
+  #side-panel
     display: flex
-    gap: 10px
     flex-direction: column
+    gap: 10px
     background: var(--surface)
     padding: 20px
     overflow-y: auto
     overflow-x: hidden
+    width: 320px
+
+    .centered
+      display: flex
+      height: 100%
+      width: 100%
+      gap: 20px
+      flex-direction: column
+      justify-content: center
+      align-items: center
