--- a/src/component/button/NewList.module.sass
+++ b/src/component/button/NewList.module.sass
@@ -38,11 +38,11 @@ form
       outline: none
       box-sizing: border-box
       background: none
-      color: var(--color)
+      color: var(--on-background)
 
     .icon
       margin: 0
-      background: var(--color)
+      background: var(--on-background)
       color: var(--background)
       width: 20px
       height: 20px
@@ -70,4 +70,4 @@ form
       cursor: pointer
       padding: 10px
       background: var(--background)
-      color: var(--text)
+      color: var(--on-background)
