--- a/src/component/form/Input.module.sass
+++ b/src/component/form/Input.module.sass
@@ -10,7 +10,6 @@
   display: inline-block
   border-radius: 5px
 
-
   input
     display: inline-block
     outline: none
@@ -18,4 +17,4 @@
     background: none
     font-size: 1.2rem
     margin: 0 10px
-    color: var(--color)
+    color: var(--on-surface)
