--- a/src/component/layout/Topbar.module.sass
+++ b/src/component/layout/Topbar.module.sass
@@ -4,16 +4,15 @@
   display: flex
   align-items: center
   justify-content: flex-end
-  background: black
+  background: var(--surface)
   width: 100vw
-  color: white
   height: var(--topbar-height)
-  border-bottom: var(--topbar-decoration-line-height) solid var(--brand)
   flex: 0
   gap: 20px
 
   .icon
     cursor: pointer
+    color: var(--on-surface)
 
     &:last-child
       margin-right: 20px
