--- a/src/page/HomePage.module.sass
+++ b/src/page/HomePage.module.sass
@@ -1,14 +1,14 @@
 #layout
   display: flex
   flex-direction: row
-  height: calc(100vh - var(--topbar-height) - var(--topbar-decoration-line-height))
+  height: calc(100vh - var(--topbar-height))
 
   h1
     margin: 0
 
   #login-side-panel
     background: var(--surface)
-    color: var(--color)
+    color: var(--on-surface)
     padding: 40px
     width: 400px
     height: 100%
