--- a/src/page/Page.module.sass
+++ b/src/page/Page.module.sass
@@ -1,5 +1,5 @@
 #layout
-  margin-top: calc(var(--topbar-height) + var(--topbar-decoration-line-height))
+  margin-top: var(--topbar-height)
   background: var(--background)
-  color: var(--color)
+  color: var(--on-background)
   overflow: hidden
