--- a/src/component/button/Button.module.sass
+++ b/src/component/button/Button.module.sass
@@ -1,6 +1,6 @@
 .button
   padding: 15px 30px
-  color: var(--on-surface)
+  color: var(--on-background)
   background: var(--transparent)
   outline: none
   border: none
