--- a/src/component/todo/TodoListItem.module.sass
+++ b/src/component/todo/TodoListItem.module.sass
@@ -18,7 +18,7 @@
 
   .icon
     margin: 0
-    background: var(--color)
+    background: var(--on-background)
     color: var(--background)
     width: 20px
     height: 20px
