--- a/src/component/user/UserWidget.module.sass
+++ b/src/component/user/UserWidget.module.sass
@@ -2,20 +2,24 @@
   display: flex
   flex-direction: row
   position: absolute
-  background: var(--widget-background)
-  color: var(--color)
+  background: var(--background)
+  color: var(--on-background)
   right: 0
   margin: 10px
-  border-radius: 5px
+  border-radius: 10px
   gap: 10px
   opacity: 1
-  box-shadow: 0 0 10px rgb(0 0 0 / 30.2%)
+  box-shadow: 0 0 5px rgb(0 0 0 / 25%)
+
+  &.dark
+    box-shadow: 0 0 10px rgb(0 0 0 / 50%)
+
 
   #picture
     width: 80px
     height: 80px
     object-fit: cover
-    border-radius: 10px
+    border-radius: 15px
     padding: 5px
 
   #texts
