--- a/src/page/ListPage.module.sass
+++ b/src/page/ListPage.module.sass
@@ -1,7 +1,7 @@
 #layout
   display: flex
   flex-direction: row
-  height: calc(100vh - var(--topbar-height) - var(--topbar-decoration-line-height))
+  height: calc(100vh - var(--topbar-height))
 
   #side-panel
     display: flex
