add basic animations

--- a/src/component/layout/FlexibleContent.module.sass
+++ b/src/component/layout/FlexibleContent.module.sass
@@ -5,6 +5,8 @@
   justify-content: flex-start
   align-items: flex-start
   flex-direction: row
+  border-radius: 20px 0 0
+  background: var(--background)
 
   &.direction-column
     flex-direction: column
