--- a/src/page/Page.module.sass
+++ b/src/page/Page.module.sass
@@ -1,5 +1,5 @@
 #layout
   margin-top: var(--topbar-height)
-  background: var(--background)
-  color: var(--on-background)
   overflow: hidden
+  background: var(--surface)
+  color: var(--on-surface)
