restyle Button component

--- a/src/component/button/Button.module.sass
+++ b/src/component/button/Button.module.sass
@@ -1,16 +1,13 @@
-.button
+button
   padding: 15px 30px
-  color: var(--on-background)
-  background: var(--transparent)
   outline: none
   border: none
-  font-size: 1.2rem
+  color: var(--on-brand)
+  font-size: 1.1rem
   text-transform: lowercase
   font-weight: bold
   cursor: pointer
-  transition: 0.5s ease all
-  box-shadow: 0.3em 0.3em 0 0 var(--brand), inset 0.3em 0.3em 0 0 var(--brand)
+  border-radius: 10px
 
-  &:hover
-    color: var(--on-brand)
-    box-shadow: 0 0 0 0 var(--brand), inset 6em 3.5em 0 0 var(--brand)
+  svg
+    margin: 0 10px
