--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -1,12 +1,21 @@
 :root
   --transparent: rgb(0 0 0 / 0%)
   --brand: rgb(111 234 101)
-  --on-brand: black
-  --gray-50: rgb(249 249 249)
+  --brand-lighter: rgb(120 235 110)
+  --brand-darker: rgb(99 222 89)
+  --white: rgb(255 255 255)
+  --black: rgb(0 0 0)
+  --gray-50: rgb(240 240 240)
+  --gray-100: rgb(212 212 212)
+  --gray-200: rgb(181 181 181)
+  --gray-300: rgb(156 156 156)
+  --gray-400: rgb(112 112 112)
+  --gray-500: rgb(79 79 79)
   --gray-600: rgb(60 60 60)
   --gray-700: rgb(40 40 40)
   --gray-800: rgb(30 30 30)
   --topbar-height: 40px
+
 
 body
   margin: 0
@@ -14,13 +23,17 @@ body
   overflow: hidden
 
 .theme-dark
+  --on-brand: var(--black)
   --background: var(--gray-700)
-  --on-background: white
+  --on-background: var(--white)
   --surface: var(--gray-800)
-  --on-surface: white
+  --on-surface: var(--white)
+  --brand-variant: var(--brand-lighter)
 
 .theme-light
-  --background: white
-  --on-background: black
+  --on-brand: var(--black)
+  --background: var(--white)
+  --on-background: var(--black)
   --surface: var(--gray-50)
-  --on-surface: black
+  --on-surface: var(--black)
+  --brand-variant: var(--brand-darker)
