--- a/src/component/form/IconPicker.module.sass
+++ b/src/component/form/IconPicker.module.sass
@@ -5,6 +5,9 @@
   border-radius: 10px
   width: 250px
   gap: 10px
+  position: absolute
+  top: 30px
+  left: 350px
   background: var(--background)
   color: var(--on-background)
   box-shadow: 0 0 5px rgb(0 0 0 / 25%)
