highlight active list in sidepanel

--- a/src/component/todo/TodoListItem.module.sass
+++ b/src/component/todo/TodoListItem.module.sass
@@ -24,3 +24,8 @@
     height: 20px
     padding: 15px
     border-radius: 10px
+
+  &.active
+    .icon
+      background: var(--brand)
+      color: var(--on-brand)
