--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -19,7 +19,7 @@
 
 body
   margin: 0
-  font-family: "Segoe UI", sans-serif
+  font-family: "Kumbh Sans", sans-serif
   overflow: hidden
 
 .theme-dark
