--- a/src/page/NotFound.module.sass
+++ b/src/page/NotFound.module.sass
@@ -4,7 +4,7 @@
   height: 100vh
   justify-content: center
   align-items: center
-  font-family: Peralta, cursive
+  font-family: "Secular One", sans-serif
   font-size: 4rem
 
   button
