add illustration to Not Found page

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -1,5 +1,7 @@
 :root
   --transparent: rgb(0 0 0 / 0%)
+  --error-light: rgb(255 87 87)
+  --error-dark: rgb(217 11 11)
   --brand: rgb(111 234 101)
   --brand-lighter: rgb(120 235 110)
   --brand-darker: rgb(99 222 89)
@@ -29,6 +31,7 @@ body
   --surface: var(--gray-800)
   --on-surface: var(--white)
   --brand-variant: var(--brand-lighter)
+  --error: var(--error-light)
 
 .theme-light
   --on-brand: var(--black)
@@ -37,3 +40,4 @@ body
   --surface: var(--gray-50)
   --on-surface: var(--black)
   --brand-variant: var(--brand-darker)
+  --error: var(--error-dark)
