--- a/src/page/NotFound.module.sass
+++ b/src/page/NotFound.module.sass
@@ -5,7 +5,16 @@
   justify-content: center
   align-items: center
   font-family: "Secular One", sans-serif
-  font-size: 4rem
+  background: var(--background)
+  color: var(--on-background)
 
   button
     margin-top: 20px
+
+  #not-found-illustration
+    height: 40vh
+    min-height: 200px
+    max-height: 300px
+
+  .horizontal-stack
+    display: flex
