define gray color

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -18,7 +18,6 @@
   --gray-800: rgb(30 30 30)
   --topbar-height: 40px
 
-
 body
   margin: 0
   font-family: "Kumbh Sans", sans-serif
@@ -32,6 +31,7 @@ body
   --on-surface: var(--white)
   --brand-variant: var(--brand-lighter)
   --error: var(--error-light)
+  --gray: var(--gray-200)
 
 .theme-light
   --on-brand: var(--black)
@@ -41,3 +41,4 @@ body
   --on-surface: var(--black)
   --brand-variant: var(--brand-darker)
   --error: var(--error-dark)
+  --gray: var(--gray-300)
