--- a/src/page/NotFound.module.sass
+++ b/src/page/NotFound.module.sass
@@ -8,6 +8,17 @@
   background: var(--background)
   color: var(--on-background)
 
+  .control
+    background: var(--surface)
+    font-size: 1.5em
+    padding: 10px
+    display: flex
+    align-items: center
+    border-radius: 10px
+    position: fixed
+    top: 16px
+    right: 16px
+
   button
     margin-top: 20px
 
