add --on-error color variable

--- a/src/component/App.sass
+++ b/src/component/App.sass
@@ -31,6 +31,7 @@ body
   --on-surface: var(--white)
   --brand-variant: var(--brand-lighter)
   --error: var(--error-light)
+  --on-error: var(--black)
   --gray: var(--gray-200)
 
 .theme-light
@@ -41,4 +42,5 @@ body
   --on-surface: var(--black)
   --brand-variant: var(--brand-darker)
   --error: var(--error-dark)
+  --on-error: var(--white)
   --gray: var(--gray-300)
