--- a/src/page/NotFound.module.sass
+++ b/src/page/NotFound.module.sass
@@ -19,6 +19,14 @@
     top: 16px
     right: 16px
 
+  h3
+    color: var(--error)
+
+  h1,
+  h3
+    margin: 0
+    font-size: 2em
+
   button
     margin-top: 20px
 
