--- a/src/component/todo/TodoListItem.module.sass
+++ b/src/component/todo/TodoListItem.module.sass
@@ -12,9 +12,10 @@
   .name
     flex: 1
     display: flex
+    margin-left: 10px
     align-items: center
     font-weight: bold
-    font-size: 1.3rem
+    font-size: 1.2rem
 
   .icon
     margin: 0
