--- a/src/component/layout/FlexibleContent.module.sass
+++ b/src/component/layout/FlexibleContent.module.sass
@@ -7,6 +7,7 @@
   flex-direction: row
   border-radius: 20px 0 0
   background: var(--background)
+  overflow: auto
 
   &.direction-column
     flex-direction: column
