change text styling in TodoListItem component

--- a/src/component/todo/TodoListItem.module.sass
+++ b/src/component/todo/TodoListItem.module.sass
@@ -14,7 +14,6 @@
     display: flex
     margin-left: 10px
     align-items: center
-    font-weight: bold
     font-size: 1.2rem
 
   .icon
@@ -27,6 +26,9 @@
     border-radius: 10px
 
   &.active
+    .name
+      font-weight: bold
+
     .icon
       background: var(--brand)
       color: var(--on-brand)
