--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
+
 body {
   margin: 0;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Sora', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
