--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@layer base {
+  body {
+    @apply text-slate-800 bg-slate-100 dark:text-slate-200 dark:bg-slate-800;
+  }
+}
