--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,26 @@ body {
   font-family: 'Sora', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-color: theme("colors.gray.400") transparent;
+}
+
+/* global scrollbars */
+*::-webkit-scrollbar{
+  border-radius: 100%;
+}
+
+*:hover::-webkit-scrollbar-thumb {
+  background: theme("colors.gray.400");
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 code {
