--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Ultra&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -45,6 +45,6 @@ code {
 
 @layer base {
   body {
-    @apply text-slate-800 bg-slate-100 dark:text-slate-200 dark:bg-slate-800;
+    @apply text-slate-800 bg-background-light dark:text-slate-200 dark:bg-background-dark;
   }
 }
