--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Ultra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Poetsen+One&display=swap');
 
 @tailwind base;
 @tailwind components;
