update tailwind config

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,13 @@ layer(base);
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
-@layer utilities {
+@layer base {
   body {
     @apply bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-200;
+  }
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
   }
 }
 
